--- a/src/components/Select/Select.scss
+++ b/src/components/Select/Select.scss
@@ -21,7 +21,7 @@
   height: 80px;
   color: green;
 }
-.show-parent {
+.show-chosen-currency-outer-div {
   margin-left: 42%; 
   height: 80px; 
   display: flex;
